style: revent screen landscape mode

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     />
     <meta name="theme-color" content="#000000" />
 
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <!-- Reset.css -->
